--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-   <section>
+    <header>
+        <img src="img/logo.png" alt="Food8 logo">
+    </header>
+   <section id="articles">
 
    </section>
 
    <template>
        <article>
-           <h2 data-header></h2>
            <img data-image src="" alt="">
+           <h2 data-header></h2>
            <p data-description></p>
            <p data-hours></p>
        </article>
@@ -24,6 +27,7 @@
     <script>
         let jsonUrl = "http://mixel.dk/kea/food8/wordpress/wp-json/wp/v2/steder";
         let steder = [];
+
         let display = document.querySelector("section");
         let template = document.querySelector("template");
 
@@ -33,6 +37,7 @@
             let dataJson = await fetch(jsonUrl);
             steder = await dataJson.json();
             console.log(steder);
+
             visSteder();
 
         }
@@ -43,13 +48,9 @@
 
                 klon.querySelector("[data-header]").textContent = sted.title.rendered;
 
-                klon.querySelector("[data-image]").src = sted.acf.image.url;
+                klon.querySelector("[data-image]").src = sted.acf.logo.url;
 
                 klon.querySelector("[data-image]").alt = sted.title.rendered;
-
-                klon.querySelector("[data-description]").innerHTML = sted.content.rendered;
-
-                klon.querySelector("[data-hours]").innerHTML = sted.acf.aabningstider;
 
                 display.appendChild(klon);
             });
