--- a/thefatpike.html
+++ b/thefatpike.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
                 klon.querySelector("[data-header]").textContent = sted.title.rendered;
 
-                klon.querySelector("[data-image]").src = sted.acf.image.url;
+                klon.querySelector("[data-image]").src = sted.acf.logo.url;
 
                 klon.querySelector("[data-image]").alt = sted.title.rendered;
 
