--- a/nyheder.html
+++ b/nyheder.html
@@ -22,7 +22,8 @@
             <li><a href="omos.html">Om os</a></li>
         </ul>
     </header>
-    <h1>Velkommen til Food8</h1>
+
+    <h1>Nyheder for Food8</h1>
 
    <section id="articles">
 
@@ -43,6 +44,6 @@
         <p>Food8 ApS — Langelinie 10, 2100 København Ø — CVR nr. 39306999</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="nyheder.js"></script>
 </body>
 </html>
