--- a/single-guide.html
+++ b/single-guide.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Guides fra Food8</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,25 +29,7 @@
             <img data-image src="" alt="">
             <h2 data-header class="singleoverskrift"></h2>
             <p data-description></p>
-            <h3>Åbningstider</h3>
-            <p data-hours class="hours"></p>
             </div>
-
-
-
-        <form action="booking.php">
-            <label for="navn">Navn: </label><br>
-            <input type="text" name="navn" required><br>
-            <label for="email">Email: </label><br>
-            <input type="email" name="email" required><br>
-            <label for="antal">Antal personer: </label><br>
-            <input type="number" name="antal" min="1" max="12"><br>
-            <label for="datetime">Dato &amp; tid:</label><br>
-            <input type="datetime-local" name="booking-date"><br>
-            <label for="navn">Eventuelle kommentar</label><br>
-            <textarea rows="4" cols="40" name="besked" placeholder="Din besked"></textarea><br>
-            <input type="submit" value="Send besked">
-        </form>
 
 
     </section>
@@ -57,7 +39,7 @@
         <p>Food8 ApS — Langelinie 10, 2100 København Ø — CVR nr. 39306999</p>
     </footer>
 
-    <script src="nyheder-single.js"></script>
+    <script src="single-guide.js"></script>
 </body>
 
 </html>
