--- a/single.html
+++ b/single.html
@@ -2,62 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title></title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="header">
-        <a href="index.html">
+	<header class="header">
+		<a href="index.html">
             <img src="img/logo.png" alt="Food8 logo">
         </a>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+		<input class="menu-btn" type="checkbox" id="menu-btn" />
+		<label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
-        <ul class="menu">
-            <li><a href="index.html">Steder</a></li>
-            <li><a href="nyheder.html">Nyheder</a></li>
-            <li><a href="guides.html">Guides</a></li>
-            <li><a href="omos.html">Om os</a></li>
-        </ul>
-    </header>
+		<ul class="menu">
+			<li><a href="index.html">Steder</a></li>
+			<li><a href="nyheder.html">Nyheder</a></li>
+			<li><a href="guides.html">Guides</a></li>
+			<li><a href="omos.html">Om os</a></li>
+		</ul>
+	</header>
 
-    <section id="articles">
-        <div class="wrapper">
-            <img data-image src="" alt="">
-            <h2 data-header class="singleoverskrift"></h2>
-            <p data-description></p>
-            <h3>Åbningstider</h3>
-            <p data-hours class="hours"></p>
-        </div>
+	<section id="articles">
+		<div class="wrapper">
+			<img data-image src="" alt="">
+			<h2 data-header class="singleoverskrift"></h2>
+			<p data-description></p>
+			<a data-menukort class="menukort" href="">Menukort</a>
+			<h3>Åbningstider</h3>
+			<p data-hours class="hours"></p>
 
-        <h3>Booking af bord</h3>
-        <form action="booking.php">
-            <label for="navn">Navn: </label><br>
-            <input type="text" name="navn" required><br>
-            <label for="email">Email: </label><br>
-            <input type="email" name="email" required><br>
-            <label for="antal">Antal personer: </label><br>
-            <input type="number" name="antal" min="1" max="12"><br>
-            <label for="datetime">Dato &amp; tid:</label><br>
-            <input type="datetime-local" name="booking-date"><br>
-            <label for="navn">Eventuelle kommentar</label><br>
-            <textarea rows="4" cols="40" name="besked" placeholder="Din besked"></textarea><br>
-            <input type="submit" value="Book nu">
-        </form>
+			<div id="floating-panel">
+				<input data-address id="address" type="textbox" value="Sydney, NSW">
+				<input id="submit" type="button" value="Geocode">
+			</div>
+
+			<div id="map"></div>
+		</div>
+
+		<h3>Booking af bord</h3>
+		<form action="booking.php">
+			<label for="navn">Navn: </label><br>
+			<input type="text" name="navn" required><br>
+			<label for="email">Email: </label><br>
+			<input type="email" name="email" required><br>
+			<label for="antal">Antal personer: </label><br>
+			<input type="number" name="antal" min="1" max="12"><br>
+			<label for="datetime">Dato &amp; tid:</label><br>
+			<input type="datetime-local" name="booking-date"><br>
+			<label for="navn">Eventuelle kommentar</label><br>
+			<textarea rows="4" cols="40" name="besked" placeholder="Din besked"></textarea><br>
+			<input type="submit" value="Book nu">
+		</form>
 
 
-    </section>
+	</section>
 
-    <footer>
-       <a href="https://www.facebook.com/food8dk/" target="_blank"><img src="img/facebook.svg"></a>
-       <a href="https://www.instagram.com/food8dk/" target="_blank"><img src="img/instagram.svg"></a><br>
-        <p>Food8 ApS — Langelinie 10, 2100 København Ø — CVR nr. 39306999</p>
-    </footer>
+	<footer>
+		<a href="https://www.facebook.com/food8dk/" target="_blank"><img src="img/facebook.svg"></a>
+		<a href="https://www.instagram.com/food8dk/" target="_blank"><img src="img/instagram.svg"></a><br>
+		<p>Food8 ApS — Langelinie 10, 2100 København Ø — CVR nr. 39306999</p>
+	</footer>
 
-    <script src="singlescript.js"></script>
+	<script src="singlescript.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1zJ0R1w7CmBEO1IKZ0L-09yMIRuFl8gI&callback=initMap">
+	</script>
 </body>
 
 </html>
