--- a/single.html
+++ b/single.html
@@ -34,8 +34,8 @@
 			<p data-hours class="hours"></p>
 
 			<div id="floating-panel">
-				<input data-address id="address" type="textbox" value="Sydney, NSW">
-				<input id="submit" type="button" value="Geocode">
+				<p data-address id="address" value=""></p>
+				<input id="submit" type="button" value="Geocode" placeholder="">
 			</div>
 
 			<div id="map"></div>
