--- a/single.html
+++ b/single.html
@@ -54,7 +54,7 @@
 			<label for="navn">Eventuelle kommentar</label><br>
 			<textarea rows="4" cols="40" name="besked" placeholder="Din besked"></textarea><br>
 			<input type="submit" value="Book nu">
-			<input data-booking type="hidden" name="booking-mail" value="">
+			<input data-booking name="booking-mail" value="">
 		</form>
 
 
