--- a/single.html
+++ b/single.html
@@ -53,7 +53,7 @@
 			<input type="datetime-local" name="booking-date"><br>
 			<label for="navn">Eventuelle kommentar</label><br>
 			<textarea rows="4" cols="40" name="besked" placeholder="Din besked"></textarea><br>
-			<input data-booking name="bookingemail" value="">
+			<input data-booking type="hidden" name="bookingemail" value="">
 			<input type="submit" value="Book nu">
 
 		</form>
