--- a/single.html
+++ b/single.html
@@ -29,7 +29,7 @@
 			<img data-image src="" alt="">
 			<h2 data-header class="singleoverskrift"></h2>
 			<p data-description></p>
-			<a data-menukort class="menukort" href="">Menukort</a>
+			<a data-menukort class="menukort" href="">Se vores menukort her!</a>
 			<h3>Åbningstider</h3>
 			<p data-hours class="hours"></p>
 
