--- a/tak.html
+++ b/tak.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+        <div class="circle"></div>
 			<h1>Tak for din besked.</h1>
 			<p>Det gør mig så glad yikes.</p>
 				<script src=""></script>
