--- a/nyheder.html
+++ b/nyheder.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+   <div class="circle"></div>
     <header class="header">
         <a href="index.html">
             <img src="img/logo.png" alt="Food8 logo">
