--- a/single.html
+++ b/single.html
@@ -28,8 +28,8 @@
 	<section id="articles">
 		<div class="wrapper">
 			<img data-image src="" alt="">
-			<h2 data-header class="singleoverskrift"></h2>
-			<p data-description></p>
+			<h2 data-header class="singleoverskrift2"></h2>
+			<p class="margin" data-description></p>
 			<a data-menukort class="menukort" href="">Se vores menukort her!</a>
 			<h3>Åbningstider</h3>
 			<p data-hours class="hours"></p>
