--- a/single.html
+++ b/single.html
@@ -29,7 +29,7 @@
 		<div class="wrapper">
 			<img data-image src="" alt="">
 			<h2 data-header class="singleoverskrift2"></h2>
-			<p class="margin" data-description></p>
+			<p class="plads" data-description></p>
 			<a data-menukort class="menukort" href="">Se vores menukort her!</a>
 			<h3>Åbningstider</h3>
 			<p data-hours class="hours"></p>
@@ -43,7 +43,7 @@
 
 			<div id="map"></div>
 		</div>
-
+    <div data-bookingSection id="booking_section">
 		<h3>Booking af bord</h3>
 		<form action="booking.php">
 			<label for="navn">Navn: </label><br>
@@ -60,7 +60,7 @@
 			<input type="submit" class="submit" value="Book nu">
 
 		</form>
-
+</div>
 
 	</section>
 
