--- a/single.html
+++ b/single.html
@@ -30,11 +30,11 @@
 			<img data-image src="" alt="">
 			<h2 data-header class="singleoverskrift2"></h2>
 			<p class="plads" data-description></p>
-			<a data-menukort class="menukort" href="">Se vores menukort her!</a>
+			<a data-menukort class="menukort" href="" target="_blank">Se vores menukort her!</a>
 			<h3>Åbningstider</h3>
 			<p data-hours class="hours"></p>
 
-			<h3>Adresse</h3>
+			<h3 class="adresse">Adresse</h3>
 
 			<div id="floating-panel">
 				<p data-address id="address" value=""></p>
