--- a/tak.html
+++ b/tak.html
@@ -4,14 +4,35 @@
 				<meta charset="utf-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<title></title>
-				<link rel="stylesheet" href="">
+				<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
         <div class="circle"></div>
-			<h1>Tak for din besked.</h1>
-			<p>Det gør mig så glad yikes.</p>
-				<script src=""></script>
+    <header class="header">
+        <a href="index.html">
+            <img src="img/logo.png" alt="Food8 logo">
+        </a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+
+        <ul class="menu">
+            <li><a href="index.html">Steder</a></li>
+            <li><a href="nyheder.html">Nyheder</a></li>
+            <li><a href="guides.html">Guides</a></li>
+            <li><a href="omos.html">Om os</a></li>
+        </ul>
+    </header>
+    <div class="tak_wrapper">
+        <h2>Tak for din booking!</h2>
+        <p>Tusind tak for din booking igennem Food8. Vi sætter stor pris på din deltagelse.</p>
+    </div>
+
+    <footer>
+       <a href="https://www.facebook.com/food8dk/" target="_blank"><img src="img/facebook.svg"></a>
+       <a href="https://www.instagram.com/food8dk/" target="_blank"><img src="img/instagram.svg"></a><br>
+        <p>Food8 ApS — Langelinie 10, 2100 København Ø — CVR nr. 39306999</p>
+    </footer>
 
 </body>
 </html>
