--- a/tak.html
+++ b/tak.html
@@ -26,6 +26,18 @@
     <div class="tak_wrapper">
         <h2>Tak for din booking!</h2>
         <p>Tusind tak for din booking igennem Food8. Vi sætter stor pris på din deltagelse.</p>
+        <p>Føler du dig inspireret til at prøve mere - tjek vores guides ud, for at finde de bedste steder og tips til mad i København.</p>
+
+        <a href="http://127.0.0.1:50850/single-guide.html?id=174">
+            <div class="guide2">
+                <p>Guide:<br>Smag på biodynamik</p>
+            </div>
+        </a>
+        <a href="http://127.0.0.1:50850/single-guide.html?id=178">
+            <div class="guide1">
+                <p>Guide til:<br>Tre restauranter i kødbyen</p>
+            </div>
+        </a>
     </div>
 
     <footer>
