--- a/omos.html
+++ b/omos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Hvem er food8?</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +17,7 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
         <ul class="menu">
-            <li><a href="index.html">Steder</a></li>
+            <li><a href="steder.html">Steder</a></li>
             <li><a href="nyheder.html">Nyheder</a></li>
             <li><a href="guides.html">Guides</a></li>
             <li><a href="omos.html">Om os</a></li>
