--- a/tak.html
+++ b/tak.html
@@ -3,7 +3,7 @@
 <head>
 				<meta charset="utf-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title></title>
+				<title>Tak for din booking!</title>
 				<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +17,7 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
         <ul class="menu">
-            <li><a href="index.html">Steder</a></li>
+            <li><a href="steder.html">Steder</a></li>
             <li><a href="nyheder.html">Nyheder</a></li>
             <li><a href="guides.html">Guides</a></li>
             <li><a href="omos.html">Om os</a></li>
@@ -28,12 +28,12 @@
         <p>Tusind tak for din booking igennem Food8. Vi sætter stor pris på din deltagelse.</p>
         <p>Føler du dig inspireret til at prøve mere - tjek vores guides ud, for at finde de bedste steder og tips til mad i København.</p>
 
-        <a href="http://127.0.0.1:50850/single-guide.html?id=174">
+        <a href="http://mixel.dk/kea/food8/single-guide.html?id=174">
             <div class="guide2">
                 <p>Guide:<br>Smag på biodynamik</p>
             </div>
         </a>
-        <a href="http://127.0.0.1:50850/single-guide.html?id=178">
+        <a href="http://mixel.dk/kea/food8/single-guide.html?id=178">
             <div class="guide1">
                 <p>Guide til:<br>Tre restauranter i kødbyen</p>
             </div>
