--- a/guides.html
+++ b/guides.html
@@ -17,7 +17,7 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
         <ul class="menu">
-            <li><a href="index.html">Steder</a></li>
+            <li><a href="steder.html">Steder</a></li>
             <li><a href="nyheder.html">Nyheder</a></li>
             <li><a href="guides.html">Guides</a></li>
             <li><a href="omos.html">Om os</a></li>
